--- a/package.json
+++ b/package.json
@@ -1,7 +1,126 @@
 {
+  "name": "svg-logo-maker",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
   "dependencies": {
+    "accepts": "^1.3.8",
+    "ansi-escapes": "^4.3.2",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "array-flatten": "^1.1.1",
+    "base64-js": "^1.5.1",
+    "bl": "^4.1.0",
+    "body-parser": "^1.20.1",
+    "buffer": "^5.7.1",
+    "bytes": "^3.1.2",
+    "call-bind": "^1.0.5",
+    "chalk": "^5.3.0",
+    "chardet": "^0.7.0",
+    "cli-cursor": "^3.1.0",
+    "cli-spinners": "^2.9.2",
+    "cli-width": "^4.1.0",
+    "clone": "^1.0.4",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.5",
+    "cookie": "^0.5.0",
+    "cookie-signature": "^1.0.6",
+    "debug": "^2.6.9",
+    "defaults": "^1.0.4",
+    "define-data-property": "^1.1.1",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "ee-first": "^1.1.1",
+    "emoji-regex": "^8.0.0",
+    "encodeurl": "^1.0.2",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^5.0.0",
+    "etag": "^1.8.1",
     "express": "^4.18.2",
+    "external-editor": "^3.1.0",
+    "figures": "^5.0.0",
+    "finalhandler": "^1.2.0",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
     "fs": "^0.0.1-security",
-    "inquirer": "^9.2.12"
-  }
+    "function-bind": "^1.1.2",
+    "get-intrinsic": "^1.2.2",
+    "gopd": "^1.0.1",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.1",
+    "has-proto": "^1.0.1",
+    "has-symbols": "^1.0.3",
+    "hasown": "^2.0.0",
+    "http-errors": "^2.0.0",
+    "iconv-lite": "^0.4.24",
+    "ieee754": "^1.2.1",
+    "inherits": "^2.0.4",
+    "inquirer": "^9.2.12",
+    "ipaddr.js": "^1.9.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-interactive": "^1.0.0",
+    "is-unicode-supported": "^1.3.0",
+    "lodash": "^4.17.21",
+    "log-symbols": "^4.1.0",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "mimic-fn": "^2.1.0",
+    "ms": "^2.0.0",
+    "mute-stream": "^1.0.0",
+    "negotiator": "^0.6.3",
+    "object-inspect": "^1.13.1",
+    "on-finished": "^2.4.1",
+    "onetime": "^5.1.2",
+    "ora": "^5.4.1",
+    "os-tmpdir": "^1.0.2",
+    "parseurl": "^1.3.3",
+    "path-to-regexp": "^0.1.7",
+    "proxy-addr": "^2.0.7",
+    "qs": "^6.11.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.1",
+    "readable-stream": "^3.6.2",
+    "restore-cursor": "^3.1.0",
+    "run-async": "^3.0.0",
+    "rxjs": "^7.8.1",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "send": "^0.18.0",
+    "serve-static": "^1.15.0",
+    "set-function-length": "^1.1.1",
+    "setprototypeof": "^1.2.0",
+    "side-channel": "^1.0.4",
+    "signal-exit": "^3.0.7",
+    "statuses": "^2.0.1",
+    "string_decoder": "^1.3.0",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "supports-color": "^7.2.0",
+    "tmp": "^0.0.33",
+    "toidentifier": "^1.0.1",
+    "tslib": "^2.6.2",
+    "type-fest": "^0.21.3",
+    "type-is": "^1.6.18",
+    "unpipe": "^1.0.0",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "vary": "^1.1.2",
+    "wcwidth": "^1.0.1",
+    "wrap-ansi": "^6.2.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
